k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-api-service
spec:
  selector:
    app: books-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
